--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gtm-support/vue-gtm": "^3.1.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "^22.14.1",
     "@vueuse/core": "^13.1.0",
@@ -17,7 +18,9 @@
     "postcss-nesting": "^13.0.1",
     "unplugin-auto-import": "^19.1.2",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "10",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
