--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@gtm-support/vue-gtm": "^3.1.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/howler": "^2.2.12",
     "@types/node": "^22.14.1",
     "@vueuse/core": "^13.1.0",
     "dayjs": "^1.11.13",
+    "howler": "^2.2.4",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "unplugin-auto-import": "^19.1.2",
